fix alignment

--- a/jean-website/src/App.css
+++ b/jean-website/src/App.css
@@ -10,20 +10,21 @@
     justify-content: space-between;
     align-items: center;
     color: black;
-    max-width: 90%;
-    margin: auto;
-    height: 80%;
+  width: 100%;
+  max-width: none;
+  margin: 0;
+  min-height: 80%;
     gap: 50px;
     z-index: 2;
 }
 
 .firsthalf {
-    width: 50vw;
+  width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: left; 
-    margin-left: 5vw;
+  align-items: flex-start;
+  margin-left: 0;
     z-index: 2;
 }
 
